--- a/XSLTViz/Views/Home/Index.cshtml
+++ b/XSLTViz/Views/Home/Index.cshtml
@@ -7,8 +7,11 @@
 
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
+	<script type="text/javascript" src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.js"></script>
+	<script type="text/javascript" src="@Url.Content("~/Scripts/main.js")"></script>
+	<link rel="stylesheet" href="@Url.Content("~/Content/styles.css")" type="text/css" />
+	<title>Index</title>
 </head>
 <body>
     <div> 
