--- a/XSLTViz/Content/styles.css
+++ b/XSLTViz/Content/styles.css
@@ -10,12 +10,16 @@ body {
 	overflow: hidden;
 }
 
-.links line {
+line.link {
 	stroke: #999;
 	stroke-opacity: 0.6;
 }
 
-.nodes circle {
+circle.node {
 	stroke: #fff;
 	stroke-width: 1.5px;
+}
+
+circle.node.fixed {
+	fill: #f00;
 }
