--- a/XSLTViz/Content/styles.css
+++ b/XSLTViz/Content/styles.css
@@ -24,6 +24,57 @@ circle.node {
 	stroke-width: 1.5px;
 }
 
-circle.node.fixed {
-	fill: #f00;
+	body.show_leaves circle.node[data-leaf='true'] {
+		fill: red;
+	}
+
+	circle.node.fixed {
+		stroke: yellow;
+	}
+
+#content {
+	height: 100vh;
 }
+
+#right_pane {
+	padding: 20px;
+	visibility:hidden;
+	white-space: nowrap;
+}
+
+#viewport {
+	overflow: hidden;
+}
+
+.split p, .split-flex p {
+	padding: 20px;
+}
+
+.split, .split-flex {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	overflow-y: auto;
+	overflow-x: hidden;
+}
+
+.gutter {
+	background-color: #eee;
+	background-repeat: no-repeat;
+	background-position: 50%;
+}
+
+	.gutter.gutter-horizontal {
+		background-image: url('grips/vertical.png');
+		cursor: ew-resize;
+	}
+
+	.gutter.gutter-vertical {
+		background-image: url('grips/horizontal.png');
+		cursor: ns-resize;
+	}
+
+	.split.split-horizontal, .gutter.gutter-horizontal {
+		height: 100%;
+		float: left;
+	}
