--- a/XSLTViz/Views/Home/Index.cshtml
+++ b/XSLTViz/Views/Home/Index.cshtml
@@ -7,14 +7,52 @@
 
 <html>
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 	<script type="text/javascript" src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.js"></script>
 	<script type="text/javascript" src="@Url.Content("~/Scripts/main.js")"></script>
+	<script type="text/javascript" src="@Url.Content("~/Scripts/split.min.js")"></script>
+
 	<link rel="stylesheet" href="@Url.Content("~/Content/styles.css")" type="text/css" />
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 	<title>Index</title>
 </head>
 <body>
-    <div> 
-    </div>
+	<div id="content">
+		<div id="toolbar"></div>
+		<div id="viewport" class="split split-horizontal"></div>
+		<div id="right_pane" class="split split-horizontal">
+
+			<div class="form-group row">
+				<h4>Project: <span id="project_name" /></h4>
+			</div>
+
+			<div class="form-group row">
+				<h6>Total files: <span id="total_files" /></h6>
+			</div>
+			
+			<div class="form-group row">
+				<h6>Options:</h6>
+			</div>
+
+			<div class="form-group">
+				<div class="form-check">
+					<input type="checkbox" class="form-check-input" id="highlight_leaves">
+					<label class="form-check-label" for="highlight_leaves">Hightlight leaves</label>
+				</div>
+
+				<div class="form-check">
+					<input type="checkbox" class="form-check-input" id="color_direction">
+					<label class="form-check-label" for="color_direction">Color direction</label>
+				</div>
+			</div>
+			</div>
+		</div>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" ></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" ></script>
+
 </body>
 </html>
