--- a/XSLTViz/Views/Home/Index.cshtml
+++ b/XSLTViz/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<script type="text/javascript" src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/jquery-3.3.1.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.js"></script>
 	<script type="text/javascript" src="@Url.Content("~/Scripts/main.js")"></script>
 	<script type="text/javascript" src="@Url.Content("~/Scripts/split.min.js")"></script>
@@ -22,7 +22,19 @@
 <body>
 	<div id="content">
 		<div id="toolbar"></div>
-		<div id="viewport" class="split split-horizontal"></div>
+		<div id="viewport" class="split split-horizontal">
+			<svg>
+				<defs>
+					<linearGradient id="color_edge" x1="0%" y1="0%" x2="100%" y2="0%">
+						<stop offset="0%" style="stop-color:rgb(0,255,0);stop-opacity:1" />
+						<stop offset="100%" style="stop-color:rgb(255,0,0);stop-opacity:1" />
+					</linearGradient>
+					<marker id="arrow" markerWidth="6" markerHeight="6" orient="auto" refX="25" refY="0">
+
+					</marker>
+				</defs>
+			</svg>
+		</div>
 		<div id="right_pane" class="split split-horizontal">
 
 			<div class="form-group row">
@@ -32,7 +44,7 @@
 			<div class="form-group row">
 				<h6>Total files: <span id="total_files" /></h6>
 			</div>
-			
+
 			<div class="form-group row">
 				<h6>Options:</h6>
 			</div>
@@ -48,8 +60,33 @@
 					<label class="form-check-label" for="color_direction">Color direction</label>
 				</div>
 			</div>
+
+			<div class="form-group row">
+				<button id="btnUndockNodes" type="button" class="btn btn-primary">Undock nodes</button>
+			</div>
+
+		</div>
+	</div>
+
+	<div id="mdlUndockNodes" class="modal" tabindex="-1" role="dialog">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title">Undock nodes</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<p>Are you sure you want to undock all nodes?</p>
+				</div>
+				<div class="modal-footer">
+					<button id="btnConfirmUndock" type="button" class="btn btn-primary">Yes</button>
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+				</div>
 			</div>
 		</div>
+	</div>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" ></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" ></script>
