--- a/XSLTViz/Content/styles.css
+++ b/XSLTViz/Content/styles.css
@@ -13,14 +13,15 @@ body {
 
 line.link {
 	stroke: #999;
-	stroke-opacity: 0.6;
+	stroke-opacity: 0.5;
 	marker-end: url(#arrow);
 }
 
-body.color_edges line.link{
+body.color_edges line.link {
 	marker-end: none;
-	stroke: url("#edge_gradient");
-	stroke-opacity: 0.9;
+	stroke-width: 2px;
+	stroke: url("#color_edge");
+	stroke-opacity: 1;
 }
 
 circle.node {
