--- a/XSLTViz/Views/Home/Index.cshtml
+++ b/XSLTViz/Views/Home/Index.cshtml
@@ -25,12 +25,12 @@
 		<div id="viewport" class="split split-horizontal">
 			<svg>
 				<defs>
-					<linearGradient id="color_edge" x1="0%" y1="0%" x2="100%" y2="0%">
-						<stop offset="0%" style="stop-color:rgb(0,255,0);stop-opacity:1" />
-						<stop offset="100%" style="stop-color:rgb(255,0,0);stop-opacity:1" />
+					<linearGradient id="color_edge">
+						<stop offset="0%" style="stop-color:rgb(255,0,0);stop-opacity:1" />
+						<stop offset="100%" style="stop-color:rgb(0,255,0);stop-opacity:1" />
 					</linearGradient>
-					<marker id="arrow" markerWidth="6" markerHeight="6" orient="auto" refX="25" refY="0">
-
+					<marker id="arrow" markerWidth="6" markerHeight="6" orient="auto" refX="25" refY="0" viewBox="0 -5 10 10">
+						<path d="M0,-5L10,0L0,5 L10,0 L0, -5" stroke="#4679BD" />
 					</marker>
 				</defs>
 			</svg>
