--- a/XSLTViz/Content/styles.css
+++ b/XSLTViz/Content/styles.css
@@ -13,29 +13,32 @@ body {
 
 line.link {
 	stroke: #999;
-	stroke-opacity: 0.5;
+	stroke-width: 0.4px;
 	marker-end: url(#arrow);
 }
 
 body.color_edges line.link {
 	marker-end: none;
-	stroke-width: 2px;
-	stroke: url("#color_edge");
-	stroke-opacity: 1;
+	stroke-width: 0.8px;
 }
 
 circle.node {
 	stroke: #fff;
-	stroke-width: 1.5px;
+	stroke-width: 0.15px;
 }
 
-	body.show_leaves circle.node[data-leaf='true'] {
-		fill: red;
-	}
+body.color_edges.show_leaves circle.node {
+	fill: #00aa00;
+}
 
-	circle.node.fixed {
-		stroke: yellow;
-	}
+body.show_leaves circle.node[data-leaf='true'] {
+	fill: red;
+}
+
+circle.node.fixed {
+	stroke-width: 0.5px;
+	stroke: yellow;
+}
 
 #content {
 	height: 100vh;
