--- a/XSLTViz/Views/Home/Index.cshtml
+++ b/XSLTViz/Views/Home/Index.cshtml
@@ -59,6 +59,11 @@
 					<input type="checkbox" class="form-check-input" id="color_direction">
 					<label class="form-check-label" for="color_direction">Color direction</label>
 				</div>
+
+				<div class="form-check">
+					<input type="checkbox" class="form-check-input" id="show_labels">
+					<label class="form-check-label" for="show_labels">Show labels</label>
+				</div>
 			</div>
 
 			<div class="form-group row">
