--- a/XSLTViz/Views/Home/Index.cshtml
+++ b/XSLTViz/Views/Home/Index.cshtml
@@ -72,6 +72,13 @@
 					<input type="checkbox" class="form-check-input" id="show_labels">
 					<label class="form-check-label" for="show_labels">Show labels</label>
 				</div>
+
+				<div class="form-check">
+					<input type="checkbox" class="form-check-input" id="show_size">
+					<label class="form-check-label" for="show_size">Show content size</label>
+				</div>
+
+
 			</div>
 
 			<div class="form-group row">
