--- a/XSLTViz/Views/Home/Index.cshtml
+++ b/XSLTViz/Views/Home/Index.cshtml
@@ -22,6 +22,7 @@
 <body>
 	<div id="content">
 		<div id="toolbar"></div>
+		<div id="left_pane" class="split split-horizontal"></div>
 		<div id="viewport" class="split split-horizontal">
 			<svg>
 				<defs>
