--- a/XSLTViz/Content/styles.css
+++ b/XSLTViz/Content/styles.css
@@ -11,6 +11,12 @@ body {
 	overflow: hidden;
 }
 
+#left_pane > pre{
+	font-size: 10pt;
+	height: 100%;
+	overflow-y:hidden;
+}
+
 line.link {
 	stroke: #999;
 	stroke-width: 0.4px;
@@ -29,6 +35,15 @@ g.node circle {
 
 g.node.highlighted > circle {
 	fill: blue !important;
+}
+
+g.node.highlighted > text {
+	fill: red !important;
+}
+
+g.node.highlighted.head > circle {
+	stroke-width: 5px !important;
+	stroke: blue !important;
 }
 
 line.highlighted {
