--- a/XSLTViz/Content/styles.css
+++ b/XSLTViz/Content/styles.css
@@ -11,9 +11,9 @@ body {
 	overflow: hidden;
 }
 
-#left_pane > pre{
+#left_pane > pre {
+	display: none;
 	font-size: 10pt;
-	height: 100%;
 	overflow-y:hidden;
 }
 
