--- a/XSLTViz/Views/Home/Index.cshtml
+++ b/XSLTViz/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<script type="text/javascript" src="http://code.jquery.com/jquery-3.3.1.js"></script>
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.js"></script>
+	<script type="text/javascript" src="@Url.Content("~/Scripts/d3.js")"></script>
 	<script type="text/javascript" src="@Url.Content("~/Scripts/prettify.js")"></script>
 	<script type="text/javascript" src="@Url.Content("~/Scripts/main.js")"></script>
 	<script type="text/javascript" src="@Url.Content("~/Scripts/split.min.js")"></script>
@@ -44,6 +44,20 @@
 			</svg>
 		</div>
 		<div id="right_pane" class="split split-horizontal">
+
+			<div class="dropdown form-group row" id="selectView">
+				<a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="ddrView" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					Switch view
+				</a>
+
+				<div class="dropdown-menu" aria-labelledby="ddrView">
+					<a class="dropdown-item" data-id="1" href="#">Intro</a>
+					<a class="dropdown-item" data-id="2" href="#">2</a>
+					<a class="dropdown-item" data-id="3" href="#">3</a>
+					<a class="dropdown-item" data-id="4" href="#">4</a>
+				</div>
+
+			</div>
 
 			<div class="form-group row">
 				<h4>Project: <span id="project_name" /></h4>
