--- a/XSLTViz/Views/Home/Index.cshtml
+++ b/XSLTViz/Views/Home/Index.cshtml
@@ -25,7 +25,8 @@
 	<div id="content">
 		<div id="toolbar"></div>
 		<div id="left_pane" class="split split-horizontal">
-			<h3 class="title"></h3>
+			<span class="title"></span>
+			<button style="display:none;" id="btnBuildTree" type="button" class="btn btn-primary btn-sm">Build tree view</button>
 			<pre class="prettyprint lang-xml">
 
 			</pre>
