--- a/XSLTViz/Views/Home/Index.cshtml
+++ b/XSLTViz/Views/Home/Index.cshtml
@@ -93,6 +93,10 @@
 					<label class="form-check-label" for="show_size">Show content size</label>
 				</div>
 
+				<div class="form-check">
+					<input type="checkbox" class="form-check-input" id="bundle_edges">
+					<label class="form-check-label" for="bundle_edges">Bundle edges</label>
+				</div>
 
 			</div>
 
