--- a/XSLTViz/Content/styles.css
+++ b/XSLTViz/Content/styles.css
@@ -62,6 +62,11 @@ line.highlighted {
 	stroke: blue !important;
 }
 
+path.path {
+	stroke: black;
+	fill: transparent;
+}
+
 g.node > text {
 	visibility: hidden;
 }
