--- a/XSLTViz/Views/Home/Index.cshtml
+++ b/XSLTViz/Views/Home/Index.cshtml
@@ -52,10 +52,130 @@
 				</a>
 
 				<div class="dropdown-menu" aria-labelledby="ddrView">
-					<a class="dropdown-item" data-id="1" href="#">Intro</a>
-					<a class="dropdown-item" data-id="2" href="#">2</a>
-					<a class="dropdown-item" data-id="3" href="#">3</a>
-					<a class="dropdown-item" data-id="4" href="#">4</a>
+					<a class="dropdown-item" data-id="1" href="#">All Stylesheets</a>
+					<a class="dropdown-item" data-id="2" href="#">AddRoleAssignments.xsl</a>
+					<a class="dropdown-item" data-id="3" href="#">AE_Wizard.xsl</a>
+					<a class="dropdown-item" data-id="4" href="#">amviewx.xsl</a>
+					<a class="dropdown-item" data-id="5" href="#">ApprovalReason.xsl</a>
+					<a class="dropdown-item" data-id="6" href="#">assembly.xsl</a>
+					<a class="dropdown-item" data-id="7" href="#">assembly_CutShort.xsl</a>
+					<a class="dropdown-item" data-id="8" href="#">assettags.xsl</a>
+					<a class="dropdown-item" data-id="9" href="#">autovue.xsl</a>
+					<a class="dropdown-item" data-id="10" href="#">BatchOperation.xsl</a>
+					<a class="dropdown-item" data-id="11" href="#">batch_error.xsl</a>
+					<a class="dropdown-item" data-id="12" href="#">BrowseForFolder.xsl</a>
+					<a class="dropdown-item" data-id="13" href="#">BrowseForFolder_CutShort.xsl</a>
+					<a class="dropdown-item" data-id="14" href="#">BrowseForProject.xsl</a>
+					<a class="dropdown-item" data-id="15" href="#">BrowseForProject_CutShort.xsl</a>
+					<a class="dropdown-item" data-id="16" href="#">ChangeDocType.xsl</a>
+					<a class="dropdown-item" data-id="17" href="#">ChangeSubscription.xsl</a>
+					<a class="dropdown-item" data-id="18" href="#">choosemasterpage.xsl</a>
+					<a class="dropdown-item" data-id="19" href="#">cnf_scchangetdp.xsl</a>
+					<a class="dropdown-item" data-id="20" href="#">cnf_scchangewfstate.xsl</a>
+					<a class="dropdown-item" data-id="21" href="#">cnf_scdownload.xsl</a>
+					<a class="dropdown-item" data-id="22" href="#">cnf_scopen.xsl</a>
+					<a class="dropdown-item" data-id="23" href="#">cnf_screname.xsl</a>
+					<a class="dropdown-item" data-id="24" href="#">cnf_screplacecontent.xsl</a>
+					<a class="dropdown-item" data-id="25" href="#">cnf_screvokewf.xsl</a>
+					<a class="dropdown-item" data-id="26" href="#">cnf_sctransition.xsl</a>
+					<a class="dropdown-item" data-id="27" href="#">cnf_scupload.xsl</a>
+					<a class="dropdown-item" data-id="28" href="#">cnf_startQCfor.xsl</a>
+					<a class="dropdown-item" data-id="29" href="#">cnf_unlockother.xsl</a>
+					<a class="dropdown-item" data-id="30" href="#">CopyObject.xsl</a>
+					<a class="dropdown-item" data-id="31" href="#">createrefs.xsl</a>
+					<a class="dropdown-item" data-id="32" href="#">createrefspage.xsl</a>
+					<a class="dropdown-item" data-id="33" href="#">emptyfile.xsl</a>
+					<a class="dropdown-item" data-id="34" href="#">emptyrendition.xsl</a>
+					<a class="dropdown-item" data-id="35" href="#">error.xsl</a>
+					<a class="dropdown-item" data-id="36" href="#">error_no_ui.xsl</a>
+					<a class="dropdown-item" data-id="37" href="#">error_pane.xsl</a>
+					<a class="dropdown-item" data-id="38" href="#">find.xsl</a>
+					<a class="dropdown-item" data-id="39" href="#">findassets.xsl</a>
+					<a class="dropdown-item" data-id="40" href="#">find_form_ex.xsl</a>
+					<a class="dropdown-item" data-id="41" href="#">find_page.xsl</a>
+					<a class="dropdown-item" data-id="42" href="#">FSChangeSDWF.xsl</a>
+					<a class="dropdown-item" data-id="43" href="#">FSCheckOut.xsl</a>
+					<a class="dropdown-item" data-id="44" href="#">FSChRevision.xsl</a>
+					<a class="dropdown-item" data-id="45" href="#">FSCopyMultiple.xsl</a>
+					<a class="dropdown-item" data-id="46" href="#">FSCreateFolder.xsl</a>
+					<a class="dropdown-item" data-id="47" href="#">FSDelete.xsl</a>
+					<a class="dropdown-item" data-id="48" href="#">FSIssueNewName.xsl</a>
+					<a class="dropdown-item" data-id="49" href="#">FSLockWarning.xsl</a>
+					<a class="dropdown-item" data-id="50" href="#">FSLtSubmit.xsl</a>
+					<a class="dropdown-item" data-id="51" href="#">fsobject.xsl</a>
+					<a class="dropdown-item" data-id="52" href="#">fsobject_page.xsl</a>
+					<a class="dropdown-item" data-id="53" href="#">fsobject_ribbon.xsl</a>
+					<a class="dropdown-item" data-id="54" href="#">FSRename.xsl</a>
+					<a class="dropdown-item" data-id="55" href="#">FSReplaceContent.xsl</a>
+					<a class="dropdown-item" data-id="56" href="#">FSRevoke.xsl</a>
+					<a class="dropdown-item" data-id="57" href="#">FSSelectionRefs.xsl</a>
+					<a class="dropdown-item" data-id="58" href="#">FSSetLock.xsl</a>
+					<a class="dropdown-item" data-id="59" href="#">FSSubmit.xsl</a>
+					<a class="dropdown-item" data-id="60" href="#">FSUnLock.xsl</a>
+					<a class="dropdown-item" data-id="61" href="#">FSUpload.xsl</a>
+					<a class="dropdown-item" data-id="62" href="#">FSUploadRend.xsl</a>
+					<a class="dropdown-item" data-id="63" href="#">FSWFLog.xsl</a>
+					<a class="dropdown-item" data-id="64" href="#">IE_FSObject.xsl</a>
+					<a class="dropdown-item" data-id="65" href="#">IE_FSObject_Menu.xsl</a>
+					<a class="dropdown-item" data-id="66" href="#">IE_main.xsl</a>
+					<a class="dropdown-item" data-id="67" href="#">IE_Main_CutShort.xsl</a>
+					<a class="dropdown-item" data-id="68" href="#">IE_Main_Menu.xsl</a>
+					<a class="dropdown-item" data-id="69" href="#">ie_SelectFileToUpload.xsl</a>
+					<a class="dropdown-item" data-id="70" href="#">importDocumentsWizard.xsl</a>
+					<a class="dropdown-item" data-id="71" href="#">InitSession.xsl</a>
+					<a class="dropdown-item" data-id="72" href="#">linktomaster.xsl</a>
+					<a class="dropdown-item" data-id="73" href="#">logoff.xsl</a>
+					<a class="dropdown-item" data-id="74" href="#">m360members.xsl</a>
+					<a class="dropdown-item" data-id="75" href="#">m360newproject.xsl</a>
+					<a class="dropdown-item" data-id="76" href="#">m360projects.xsl</a>
+					<a class="dropdown-item" data-id="77" href="#">main.xsl</a>
+					<a class="dropdown-item" data-id="78" href="#">main_CutShort.xsl</a>
+					<a class="dropdown-item" data-id="79" href="#">MakeWritable.xsl</a>
+					<a class="dropdown-item" data-id="80" href="#">MakeWritable_Common.xsl</a>
+					<a class="dropdown-item" data-id="81" href="#">menu_selection.xsl</a>
+					<a class="dropdown-item" data-id="82" href="#">MSOutlookStub.xsl</a>
+					<a class="dropdown-item" data-id="83" href="#">NewSelection.xsl</a>
+					<a class="dropdown-item" data-id="84" href="#">NoPDFTronLic.xsl</a>
+					<a class="dropdown-item" data-id="85" href="#">object.xsl</a>
+					<a class="dropdown-item" data-id="86" href="#">object_ribbon.xsl</a>
+					<a class="dropdown-item" data-id="87" href="#">packages.xsl</a>
+					<a class="dropdown-item" data-id="88" href="#">pdftron.xsl</a>
+					<a class="dropdown-item" data-id="89" href="#">pdftronCompare.xsl</a>
+					<a class="dropdown-item" data-id="90" href="#">preferences.xsl</a>
+					<a class="dropdown-item" data-id="91" href="#">projectcopies.xsl</a>
+					<a class="dropdown-item" data-id="92" href="#">RCl_BrowseForFolder.xsl</a>
+					<a class="dropdown-item" data-id="93" href="#">rcl_error.xsl</a>
+					<a class="dropdown-item" data-id="94" href="#">refBatch.xsl</a>
+					<a class="dropdown-item" data-id="95" href="#">ReferenceMainInfo.xsl</a>
+					<a class="dropdown-item" data-id="96" href="#">References.xsl</a>
+					<a class="dropdown-item" data-id="97" href="#">ReferencesDialog.xsl</a>
+					<a class="dropdown-item" data-id="98" href="#">ReferencesList.xsl</a>
+					<a class="dropdown-item" data-id="99" href="#">RefListConverter.xsl</a>
+					<a class="dropdown-item" data-id="100" href="#">reports.xsl</a>
+					<a class="dropdown-item" data-id="101" href="#">roles.xsl</a>
+					<a class="dropdown-item" data-id="102" href="#">sdwfstate.xsl</a>
+					<a class="dropdown-item" data-id="103" href="#">SelectDateTime.xsl</a>
+					<a class="dropdown-item" data-id="104" href="#">SelectDocTemplate.xsl</a>
+					<a class="dropdown-item" data-id="105" href="#">SelectDocTemplate_old.xsl</a>
+					<a class="dropdown-item" data-id="106" href="#">SelectDocType.xsl</a>
+					<a class="dropdown-item" data-id="107" href="#">SelectDocType_Old.xsl</a>
+					<a class="dropdown-item" data-id="108" href="#">SelectFileToUpload.xsl</a>
+					<a class="dropdown-item" data-id="109" href="#">selections.xsl</a>
+					<a class="dropdown-item" data-id="110" href="#">SelectScope.xsl</a>
+					<a class="dropdown-item" data-id="111" href="#">SetPropertyValue.xsl</a>
+					<a class="dropdown-item" data-id="112" href="#">SiteCache.xsl</a>
+					<a class="dropdown-item" data-id="113" href="#">tb_menu.xsl</a>
+					<a class="dropdown-item" data-id="114" href="#">TemplateForMainHybrid.xsl</a>
+					<a class="dropdown-item" data-id="115" href="#">undelete.xsl</a>
+					<a class="dropdown-item" data-id="116" href="#">userList.xsl</a>
+					<a class="dropdown-item" data-id="117" href="#">versions.xsl</a>
+					<a class="dropdown-item" data-id="118" href="#">ViewThumbnail.xsl</a>
+					<a class="dropdown-item" data-id="119" href="#">vueCompare.xsl</a>
+					<a class="dropdown-item" data-id="120" href="#">wfselectstate.xsl</a>
+					<a class="dropdown-item" data-id="121" href="#">WorkflowDialog.xsl</a>
+					<a class="dropdown-item" data-id="122" href="#">WorkflowPane.xsl</a>
+					<a class="dropdown-item" data-id="123" href="#">xml_wfstate.xsl</a>
+					<a class="dropdown-item" data-id="124" href="#">Xml_Wizard.xsl</a>
 				</div>
 
 			</div>
