--- a/XSLTViz/Views/Home/Index.cshtml
+++ b/XSLTViz/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    //Layout = null;
+	//Layout = null;
 }
 
 <!DOCTYPE html>
@@ -212,9 +212,14 @@
 					<label class="form-check-label" for="show_size">Show content size</label>
 				</div>
 
+				@*<div class="form-check">
+						<input type="checkbox" class="form-check-input" id="bundle_edges">
+						<label class="form-check-label" for="bundle_edges">Bundle edges</label>
+					</div>*@
+
 				<div class="form-check">
-					<input type="checkbox" class="form-check-input" id="bundle_edges">
-					<label class="form-check-label" for="bundle_edges">Bundle edges</label>
+					<input type="checkbox" class="form-check-input" id="show_templates">
+					<label class="form-check-label" for="show_templates">Show templates</label>
 				</div>
 
 			</div>
@@ -246,8 +251,8 @@
 		</div>
 	</div>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" ></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" ></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
 </body>
 </html>
